--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,18 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+
+        <!-- Thymeleaf -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
+        </dependency>
+        <!-- Thymeleaf -->
+
         <!-- JUNIT -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -43,7 +55,6 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
 
         <!-- JWT -->
         <dependency>
